# HiAGM

./: README.md  pyproject.toml  requirements.txt
HiAGM.egg-info/: PKG-INFO  SOURCES.txt
src/HiAGM.egg-info/: SOURCES.txt  top_level.txt
src/hiagm/: evaluate.py  predict.py  train.py
src/hiagm/data_modules/: __init__.py  data_loader.py  dataset.py  preprocess.py  vocab.py
src/hiagm/helper/: configure.py  hierarchy_tree_statistic.py  utils.py
src/hiagm/models/: embedding_layer.py  model.py  multi_label_attention.py
src/hiagm/models/structure_model/: structure_encoder.py
src/hiagm/train_modules/: trainer.py
